<resources>
    <string name="app_name">RaduGym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sport App</string>
    <string name="nav_header_subtitle">Developed by Radu George</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="training_group_menu">Training</string>
    <string name="Register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nimic">Nimic</string>
    <string name="press_to_get_notify">Press to get notify!</string>
    <string name="notification">Notification!</string>
    <string name="channel_name">Channel name</string>
    <string name="Add_to_database">Add to database!</string>
</resources>