<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="200dp" />


    <EditText
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp"
        android:hint="@string/enter_username" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_email" />

    <Button
        android:id="@+id/butonNouRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/Register" />



</LinearLayout>